--- a/phaser-typescript-webpack/css/custom.css
+++ b/phaser-typescript-webpack/css/custom.css
@@ -24,10 +24,20 @@
   display: flex;
 }
 
+.title-img {
+  background: none !important;  
+}
+
+.main-logo {
+  background: none !important;
+  width: 120px;
+  height: 120px;
+}
+
 .social-logo {
   background: none !important;
-  width: 100px;
-  height: 100px;
+  width: 70px;
+  height: 70px;
 }
 .social-logo-small {
   background: none !important;
