Improve image file structure and add 'About me' section slide

--- a/phaser-typescript-webpack/css/custom.css
+++ b/phaser-typescript-webpack/css/custom.css
@@ -44,6 +44,11 @@
   background: none !important;  
 }
 
+.main-img {
+  background: none !important;  
+  height: 550px;  
+}
+
 .main-logo {
   background: none !important;
   width: 120px;
