--- a/phaser-typescript-webpack/css/custom.css
+++ b/phaser-typescript-webpack/css/custom.css
@@ -55,6 +55,12 @@
   height: 120px;
 }
 
+.main-logo-big {
+  background: none !important;
+  width: 250px;
+  height: 250px;
+}
+
 .social-logo {
   background: none !important;
   width: 70px;
@@ -64,4 +70,22 @@
   background: none !important;
   width: 70px;
   height: 70px;
+}
+
+.slide-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-margin {
+  margin: 0 !important;
+  line-height: 0.8 !important;
+  font-size: 35px;
 }
