Finish main presentation slides (add links left)

--- a/phaser-typescript-webpack/css/custom.css
+++ b/phaser-typescript-webpack/css/custom.css
@@ -33,6 +33,7 @@
 
 .reveal pre code {
   line-height: 1.2em;
+  max-height: 350px;
 }
 
 /* Custom classes */
@@ -53,6 +54,11 @@
   background: none !important;
   width: 120px;
   height: 120px;
+}
+
+.main-logo-medium {
+  background: none !important;
+  width: 180px;
 }
 
 .main-logo-big {
@@ -84,8 +90,19 @@
   justify-content: center;
 }
 
+.centered-spaced {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .no-margin {
   margin: 0 !important;
   line-height: 0.8 !important;
   font-size: 35px;
+}
+
+.gif-img {
+  background: none !important;  
+  height: 400px;  
 }
